# appimagepool

./: .gitignore  Cargo.toml  README.md  build.rs  create_appimage.sh  l10n.yaml  pubspec.yaml  snapcraft.yaml
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: flutterci.yml  generateappimage.yml
AppDir/: AppRun
AppImageBrowser.AppDir/: AppRun  appimagebrowser.desktop
AppImagePool.AppDir/: AppRun  appimagebrowser.desktop
api/: featuredapps.json
assets/: appimagepool.appdata.xml  appimagepool.desktop
lib/: home_page.dart  main.dart  translations.dart
lib/models/: app_model.dart  credits_model.dart  download_item_model.dart  models.dart  query_app.dart  query_app_model.dart
lib/pages/: app.dart  category.dart  custom_license_page.dart  pages.dart
lib/providers/: download.dart  download_provider.dart  force_dark_theme.dart  gnome_theme_provider.dart  local_path_provider.dart  portable_appimage_provider.dart  providers.dart  theme_type.dart  view_type.dart
lib/screens/: app.dart  browse_view.dart  category.dart  custom_license_page.dart  downloads_view.dart  installed_view.dart  screens.dart
lib/src/: app.dart
lib/translations/: app_ar.arb  app_awa.arb  app_bn.arb  app_ca.arb  app_ckb.arb  app_cs.arb  app_de.arb  app_en.arb  app_eo.arb  app_es.arb  app_et.arb  app_fa.arb  app_fi.arb  app_fr.arb  app_hi.arb  app_it.arb  app_ka.arb  app_kn.arb  app_ko.arb  app_nb.arb  app_nl.arb  app_pl.arb  (+11 more)
linux/: CMakeLists.txt  my_application.cc
snap/: snapcraft.yaml
src/: main.rs
test/: widget_test.dart
web/: index.html  manifest.json
(+79 files in other folders)
