[package]
name = "appimagepool"
version = "2.3.1"
authors = ["Prateek SU <pankajsunal123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cargo-emit = "0.1"
nativeshell_build = "0.1.9"

[dependencies]
nativeshell = "0.1.9"
env_logger = "0.9.0"